\name{NEWS}
\title{News for Package \pkg{vcd}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in version 1.3-3}{
  \itemize{
    \item \code{loddsratio} now accepts structural zeros (missing values)
    \item \code{cotab_agreementplot} panel function for plotting
    conditional (stratified) agreement charts added
    \item \code{cotab_loddsratio} panel function for plotting
    conditional log-odds ratios plots added
    \item \code{assocstats} now handles strata (all but the first two
    dimensions)
    \item \code{sieve} now accepts a \code{scale=} argument
    \item code for handling (log) odds ratios greatly enhanced to
    support extended odds ratios and conditioned odds ratio plots.
    \item \code{binreg_plot()} added for (conditioned) binary regression plots
    \item Bug fix in mosaic: using \code{highlighting=} and/or
    \code{condvars=} now not only reorders the table, but also the split
    information, so that both remain consistent.
    \item All plot functions now have an option to return the produced
    plot as an grid object for further use (e.g., in \code{mplot()})
    \item \code{mplot()} added for combining multiple grid plots in a
    multi-panel-layout
    \item \code{legend_grid} now allows more options for positioning,
    and an \code{inset} argument has been added for relative adjustments.
  }  
}

\section{Changes in version 1.3-2}{
  \itemize{
    \item \code{Ord_plot()} gets \code{lwd}, \code{lty} and \code{col} arguments
    to control plotting of the OLS and WLS lines.
    \item \code{distplot()} gets an \code{lwd} argument.
    \item Changed default line types for \code{sieve} so that positive residuals are
    shown with solid lines, as per Friendly specifications.
    \item fixed problems with \code{pairs_strucplot()} type argument, particularly for
    \code{type="conditional"}
    \item Fixed error in \code{CoalMiners} data (missing group, labels
    switched)