@@ -166,18 +166,18 @@ S3method("fitted", "coindep_test")
 S3method("predict", "goodfit")
 
 S3method("confint", "Kappa")
-S3method("confint", "oddsratio")
+#S3method("confint", "oddsratio")
 
 S3method("plot", "goodfit")
-S3method("plot", "oddsratio")
+#S3method("plot", "oddsratio")
 S3method("plot", "loglm")
 S3method("plot", "structable")
 
 S3method("print", "Kappa")
 S3method("print", "summary.Kappa")
 S3method("print", "goodfit")
-S3method("print", "oddsratio")
-S3method("print", "summary.oddsratio")
+#S3method("print", "oddsratio")
+#S3method("print", "summary.oddsratio")
 S3method("print", "assocstats")
 S3method("print", "summary.assocstats")
 S3method("print", "table2d_summary")
@@ -186,7 +186,7 @@ S3method("print", "structable")
 S3method("summary", "Kappa")
 S3method("summary", "assocstats")
 S3method("summary", "goodfit")
-S3method("summary", "oddsratio")
+#S3method("summary", "oddsratio")
 
 # logoddsratio related methods
 S3method("loddsratio", "default")
