@@ -65,13 +65,17 @@ fourfold(CoalMiners[,,2:9], std = "ind.max", mfcol = c(2,4))
 
 
 ## Log Odds Ratio Plot
-summary(l <- oddsratio(CoalMiners[,,2:9]))
-age <- seq(25, 60, by = 5)
-plot(l,
-     xlab = "Age Group",
-     main = "Breathlessness and Wheeze in Coal Miners")
-m <- lm(l ~ age + I(age^2))
-lines(fitted(m), col = "red", lwd=2)
+lor_CM <- loddsratio(CoalMiners)
+summary(lor_CM)
+plot(lor_CM)
+lor_CM_df <- as.data.frame(lor_CM)
+
+# fit linear models using WLS
+age <- seq(20, 60, by = 5)
+lmod <- lm(LOR ~ age, weights = 1 / ASE^2, data = lor_CM_df)
+grid.lines(age, fitted(lmod), gp = gpar(col = "blue"))
+qmod <- lm(LOR ~ poly(age, 2), weights = 1 / ASE^2, data = lor_CM_df)
+grid.lines(age, fitted(qmod), gp = gpar(col = "red"))
 }
 
 \keyword{datasets}
